--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a:hover {
     border-radius: 5px;
     padding: 15px;
     margin: 20px;
-    box-shadow: 8px 8px 4px #68666B;
+    box-shadow: 8px 8px 4px #cbccc2;
 }
 
 .text-center {
